# cpp-box

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app1/: CMakeLists.txt  config.json  main.cpp
src/app2/: CMakeLists.txt  config.json  main.cpp
src/module1/: CMakeLists.txt
src/module2/: CMakeLists.txt
src/proto/: msg.pb.cc  msg.pb.h  msg.proto
tools/cmake/: AddProtocTarget.cmake  CheckPyEnv.cmake  CheckPyPackages.cmake  CheckPythonEnv.cmake  FindCppZeroMQ.cmake  FindProtoBuf.cmake  FindSDK.cmake  FindZeroMQ.cmake  FindcJSON.cmake  ProtoToCc.cmake  use_cjson.cmake  use_proto.cmake
tools/script/: install_abseil-cpp.sh  install_c-ares.sh  install_cmake.sh  install_cppzmq.sh  install_grpc.sh  install_libzmq.sh  install_protobuf.sh  install_re2.sh  install_zlib.sh
